# mcp-tests

./: .gitignore  README.md  pyproject.toml
server/: client.py  weather.json  weather.py
